# pixi-docker-example

./: README.md
1-naive-approach/: .dockerignore  Dockerfile  justfile
2-remove-cache/: Dockerfile  justfile  pixi.toml
3-multi-stage/: Dockerfile  justfile  pixi.toml  pyproject.toml
4-prod-environment/: Dockerfile  justfile
5-distroless/: Dockerfile  justfile
5-distroless-debug/: .dockerignore  Dockerfile  justfile  pixi.toml
